{
    "name": "PlayersInput",
    "maps": [
        {
            "name": "Player",
            "id": "7039ccd0-01f9-41aa-8f5c-d1e6fae4b38a",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fd32b625-1315-4780-b4ac-57142541ef63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "96f28372-bf8b-41b6-b349-5f59718ab3a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpeedRun",
                    "type": "Button",
                    "id": "ca7b33f5-5613-418f-9d11-1db25765e3e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "8d587f87-cbbe-41b0-abf2-b4abdaf9ebb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e4edacba-cfd4-435e-86ad-9a279b48442b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "5ec1d1c3-a4ff-434f-b012-ed0995f530e0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cbdfa0ee-a6f3-4f8a-87e6-20d72b4da63e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c4613261-675b-4b49-a2d2-c62481fe3d81",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6cde487c-d61b-43b4-80cc-2915900da135",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "34dc7be8-0cbc-4b38-998f-9b34d681857f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "335b0b1e-5799-4e59-82c3-70d43884ef86",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c4b8ef7d-084f-4f11-998e-68c4a431b303",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0bf0e606-bb82-42da-9acf-709e117acffe",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8454e159-6ede-4774-86f5-61ea0adafa6d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ba79f99c-d964-436c-b93d-f425fa6f8ca8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "233d3f54-6ba2-4bf0-93d8-2baf84aa973a",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedRun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "794dbe82-0b06-4f00-904c-25b92c214007",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}